src/objects/Document_Viewer_Action_Ribbon__mdt.object
<CustomObject>
    <description>Settings for buttons in the Document Viewer Ribbon</description>
    <fields>
        <fullName>ZP_Action__c</fullName>
        <label>ZP_Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZP_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZP_Component__c</fullName>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZP_Document_Record_Type__c</fullName>
        <description>Name of the Salesforce Record Type that should be associated with this action.</description>
        <label>Document Record Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZP_Icon_Name__c</fullName>
        <description>The name of the Lightning Icon as defined in the Salesforce Lightning Design System. For example: standard-lead.</description>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZP_Ordinal__c</fullName>
        <description>Order in which the action icon should be displayed in the Document Action Ribbon.</description>
        <label>Ordinal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZP_Tooltip__c</fullName>
        <description>API name of the &apos;custom label&apos; for the action icon that should be displayed as a tool tip for the icon.</description>
        <label>Tooltip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Document Viewer Action Ribbon Setting</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>ZP_Active__c</columns>
        <columns>MasterLabel</columns>
        <columns>ZP_Action__c</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>ZP_Ordinal__c</columns>
        <columns>ZP_Component__c</columns>
        <columns>ZP_Document_Record_Type__c</columns>
        <columns>ZP_Icon_Name__c</columns>
        <columns>ZP_Tooltip__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
    </listViews>
    <pluralLabel>Document Viewer Action Ribbon Settings</pluralLabel>
</CustomObject>